# scms

./: CMakeLists.txt  Makefile  README.md
data/: courses.csv  users.csv
include/: Admin.h  AttendanceManager.h  AttendanceRecord.h  AuthManager.h  Book.h  Course.h  CourseManager.h  Exam.h  ExamManager.h  LibraryManager.h  Logger.h  Person.h  ReportGenerator.h  Student.h  Teacher.h  User.h  utils.h
src/: Admin.cpp  AttendanceManager.cpp  AttendanceRecord.cpp  AuthManager.cpp  Book.cpp  Course.cpp  CourseManager.cpp  Exam.cpp  ExamManager.cpp  LibraryManager.cpp  Logger.cpp  Person.cpp  Student.cpp  Teacher.cpp  User.cpp  main.cpp  utils.cpp
tests/: test_attendance.cpp  test_auth.cpp  test_course.cpp  test_exam.cpp  test_library.cpp  test_persons.cpp
